<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:checkableBehavior="single">
                <item
                    android:id="@+id/comment"
                    android:icon="@drawable/ic_comment_black_24dp"
                    android:title="@string/comment"
                    />
                <item
                    android:id="@+id/setting"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/setting"
                    />
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_exit_to_app_black_24dp"
                    android:title="@string/logout"
                    />
        </group>
</menu>
