<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".storeResultAct">

    <Button
        android:id="@+id/button46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="44dp"
        android:text="@string/priceSort"
        app:layout_constraintEnd_toStartOf="@+id/button47"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button46"
        android:layout_centerHorizontal="true"
        android:text="@string/distanceSort"
        app:layout_constraintEnd_toStartOf="@+id/button48"
        app:layout_constraintStart_toEndOf="@+id/button46"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button46"
        android:layout_toStartOf="@+id/imageButton11"
        android:text="@string/starSort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button47"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="gotoSearchAct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button52"
        app:layout_constraintTop_toTopOf="@+id/button52"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <Button
        android:id="@+id/button49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="gotoRandomSuggestAct"
        android:text="@string/randomSuggest"
        app:layout_constraintBaseline_toBaselineOf="@+id/button50"
        app:layout_constraintEnd_toStartOf="@+id/button50"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button49"
        android:onClick="gotoQuestionSuggestAct"
        android:text="@string/questionSuggest"
        app:layout_constraintEnd_toStartOf="@+id/button52"
        app:layout_constraintStart_toEndOf="@+id/button49"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button51"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button50"
        android:onClick="gotoMain2Activity"
        android:text="@string/mainAct"
        app:layout_constraintBaseline_toBaselineOf="@+id/button50"
        app:layout_constraintStart_toEndOf="@+id/button50" />

    <Button
        android:id="@+id/button52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button48"
        android:layout_alignParentBottom="true"
        android:onClick="gotoRecordAct"
        android:text="@string/record"
        app:layout_constraintBaseline_toBaselineOf="@+id/button51"
        app:layout_constraintEnd_toStartOf="@+id/imageButton11"
        app:layout_constraintStart_toEndOf="@+id/button50" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="122dp"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="有牛肉麵的店"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button47"
        app:layout_constraintStart_toStartOf="@+id/button47"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>