<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userSuggestAct2">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button45"
        android:layout_alignParentStart="true"
        android:layout_marginStart="156dp"
        android:text="banana"
        app:layout_constraintEnd_toStartOf="@+id/button45"
        app:layout_constraintStart_toEndOf="@+id/imageButton10"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button45"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/imageButton10"
        android:layout_toEndOf="@+id/button43"
        android:text="@string/followUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="61dp"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="61dp"
        android:layout_marginStart="42dp"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_myplaces" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="gotoSearchAct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button44"
        app:layout_constraintTop_toTopOf="@+id/button44"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <Button
        android:id="@+id/button41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="gotoRandomSuggestAct"
        android:text="@string/randomSuggest"
        app:layout_constraintBaseline_toBaselineOf="@+id/button42"
        app:layout_constraintEnd_toStartOf="@+id/button42"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:onClick="gotoQuestionSuggestAct"
        android:text="@string/questionSuggest"
        app:layout_constraintEnd_toStartOf="@+id/button44"
        app:layout_constraintStart_toEndOf="@+id/button41"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button43"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button42"
        android:onClick="gotoMain2Activity"
        android:text="@string/mainAct"
        app:layout_constraintBaseline_toBaselineOf="@+id/button42"
        app:layout_constraintStart_toEndOf="@+id/button42" />

    <Button
        android:id="@+id/button44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/button39"
        android:onClick="gotoRecordAct"
        android:text="@string/record"
        app:layout_constraintBaseline_toBaselineOf="@+id/button43"
        app:layout_constraintEnd_toStartOf="@+id/imageButton9"
        app:layout_constraintStart_toEndOf="@+id/button42" />

    <Button
        android:id="@+id/button38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="64dp"
        android:text="@string/priceSort"
        app:layout_constraintBaseline_toBaselineOf="@+id/button39"
        app:layout_constraintEnd_toStartOf="@+id/button39"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button38"
        android:layout_centerHorizontal="true"
        android:text="@string/distanceSort"
        app:layout_constraintEnd_toStartOf="@+id/button40"
        app:layout_constraintStart_toEndOf="@+id/button38"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/button40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button38"
        android:layout_marginEnd="34dp"
        android:text="@string/starSort"
        app:layout_constraintBaseline_toBaselineOf="@+id/button39"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button39" />
</RelativeLayout>