<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".storeInformationAct">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button57"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp"
        android:text="老巴"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/ratingBar2"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="55dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView19"
        app:layout_constraintEnd_toStartOf="@+id/textView19"
        app:layout_constraintStart_toStartOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/button57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText11"
        android:layout_toStartOf="@+id/button58"
        android:text="@string/consider"
        app:layout_constraintBaseline_toBaselineOf="@+id/button58"
        app:layout_constraintEnd_toEndOf="@+id/ratingBar2" />

    <Button
        android:id="@+id/button58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="14dp"
        android:text="@string/eat"
        app:layout_constraintStart_toEndOf="@+id/ratingBar2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button59"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/finish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="135dp"
        android:text="@string/storeInformation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button57" />

    <EditText
        android:id="@+id/editText12"
        android:layout_width="379dp"
        android:layout_height="86dp"
        android:layout_alignEnd="@+id/ratingBar2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="47dp"
        android:layout_marginEnd="-137dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />
</RelativeLayout>