<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userSuggestAct">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="#FFDEAD"
            app:layout_scrollFlags="scroll"
            app:title="@string/userSuggest" />

        <android.support.design.widget.TabLayout
            android:id="@+id/mTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFDEAD"
            app:tabGravity="fill"
            app:tabIndicatorColor="#FFF"
            app:tabIndicatorHeight="4dp"
            app:tabMode="fixed">

            <android.support.design.widget.TabItem
                android:id="@+id/userSuggest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userSuggest" />

            <android.support.design.widget.TabItem
                android:id="@+id/followUserSuggest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followUserSuggest" />
        </android.support.design.widget.TabLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/mTabLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFDEAD"
            app:tabGravity="fill"
            app:tabIndicatorColor="#FFF"
            app:tabIndicatorHeight="4dp"
            app:tabMode="fixed">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priceSort" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distanceSort" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starSort" />
        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/sc1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <TableLayout
            android:id="@+id/tbLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingRight="5dp"></TableLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/sc2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <TableLayout
            android:id="@+id/tb2Layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingRight="5dp"></TableLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>