<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContentSuggestAct">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="#FFDEAD"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/contentSuggest" />

    </android.support.design.widget.AppBarLayout>

    <TableLayout
        android:id="@+id/tbLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        >

    </TableLayout>
    <Button
        android:id="@+id/buttonrpre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/main2activity_button_activity"
        android:onClick="prepage"
        android:text="@string/prePage"
        app:layout_constraintTop_toBottomOf="@+id/tbLayout"
        app:layout_constraintEnd_toStartOf="@+id/buttondown"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"/>
    <Button
        android:id="@+id/buttondown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/main2activity_button_activity"
        android:onClick="nextpage"
        android:text="@string/nextPage"
        app:layout_constraintTop_toBottomOf="@+id/tbLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonrpre"
        android:gravity="center"/>
</android.support.constraint.ConstraintLayout>